--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_DATABASE_URL="postgresql://neondb_owner:npg_Hyf47wvcpjYP@ep-frosty-wind-acsz7cno-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require"
+VITE_DATABASE_URL="postgresql://neondb_owner:npg_PEeYG8p0BqQj@ep-mute-mud-adsmr6ut-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
